<resources>
    <string name="google_app_id">cryptic-idiom-128002</string>

    <string name="app_name">Falcon Test</string>
    <string name="setIPAddress">xxx.xxx.xxx.xxx</string>
    <string name="setIPButton">Set IP Address</string>
    <string name="IPAddress">xxx.xxx.xxx.xxx</string>
    <string name="mvToWebViewButton">Move to Web View Activity</string>
    <string name="mvToNavDrwrButton">Move to Navigation Drawer Activity</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="setUser">Set Username</string>
    <string name="setPassword">Set Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_IPChecker">IP Address:</string>
    <string name="connectButton">Connect</string>
    <string name="disconnectButton">Disconnect</string>
    <string name="title_activity_websocket">Websocket</string>
    <string name="title_activity_bluetooth_le">BluetoothLE</string>

    <string name="ble_not_supported">Bluetooth Low Energy is not supported on this device,
        and as such will not work with the glove controls</string>
    <string name="title_activity_socket">Socket</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="title_activity_cardboard">Cardboard</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
